# video_retranslator

./: CMakeLists.txt  package.xml
include/: cameraParams.yml
src/: bottom_catcher.cpp  frontal_catcher.cpp  main.cpp  video_retranslator.cpp  video_retranslator.h
